Fixes filter container overflow issue

--- a/src/styles/sam-styles/expansion/expansion-panel.scss
+++ b/src/styles/sam-styles/expansion/expansion-panel.scss
@@ -40,3 +40,10 @@
 .mat-expansion-panel-body .results-list {
   position: static;
 }
+.mat-expansion-panel-body .sam-autocomplete-multiselect .sam-autocomplete-multiselect-input{
+  width: 150px;
+}
+.mat-expansion-panel-body .sam-autocomplete-multiselect ul.multiselect-parent-list{
+  position: static;
+  width: 207px;
+}
